SERVER-29327: Prevent DBDirectClient from storing MaxTimeMS on cursors

(cherry picked from commit 7d5b5cd998df4a8532748c2a59fce06c305122d8)