src/mongo/db/commands/find_cmd.cpp
@@ -408,7 +408,11 @@ public:
             cursorExec->saveState();
             cursorExec->detachFromOperationContext();
 
-            cursor->setLeftoverMaxTimeMicros(txn->getRemainingMaxTimeMicros());
+            // We assume that cursors created through a DBDirectClient are always used from their
+            // original OperationContext, so we do not need to move time to and from the cursor.
+            if (!txn->getClient()->isInDirectClient()) {
+                cursor->setLeftoverMaxTimeMicros(txn->getRemainingMaxTimeMicros());
+            }
             cursor->setPos(numResults);
 
             // Fill out curop based on the results.
